// Simple ER Example: University System
// Entities: Students, Courses, Instructors
// Relationship: Students enroll in Courses, Instructors teach Courses

Table students {
  student_id int [pk, increment]
  name varchar
  email varchar [unique]
  major varchar
  created_at timestamp
}

Table instructors {
  instructor_id int [pk, increment]
  name varchar
  email varchar [unique]
  department varchar
}

Table courses {
  course_id int [pk, increment]
  code varchar [unique]      // e.g., CS4332
  title varchar
  credits int
  instructor_id int
}

Table enrollments {
  student_id int [not null]
  course_id int [not null]
  enrolled_at timestamp
  grade varchar

  Indexes {
    (student_id, course_id) [pk]   // composite primary key
  }
}

// Relationships

Ref: courses.instructor_id > instructors.instructor_id
Ref: enrollments.student_id > students.student_id
Ref: enrollments.course_id > courses.course_id